# VINS-Mobile-Android

./: .gitignore
VINS_Mobile_AndroidPort/: build.gradle
VINS_Mobile_AndroidPort/app/: build.gradle
VINS_Mobile_AndroidPort/app/libs/VINS-Mobile-master/: CMakeLists.txt
VINS_Mobile_AndroidPort/app/libs/VINS-Mobile-master/VINS_ThirdPartyLib/: CMakeLists.txt
VINS_Mobile_AndroidPort/app/libs/VINS-Mobile-master/VINS_ThirdPartyLib/ceres-solver/jni/: Application.mk
VINS_Mobile_AndroidPort/app/libs/VINS-Mobile-master/VINS_ios/: draw_result.cpp  feature_tracker.cpp
VINS_Mobile_AndroidPort/app/libs/VINS-Mobile-master/VINS_ios/ObjectiveC/: ViewController.mm
VINS_Mobile_AndroidPort/app/src/main/: AndroidManifest.xml
VINS_Mobile_AndroidPort/app/src/main/cpp/VINS_Android/: CMakeLists.txt  ViewController.cpp
VINS_Mobile_AndroidPort/app/src/main/cpp/jni/: nativelib.cpp
VINS_Mobile_AndroidPort/gradle/wrapper/: gradle-wrapper.properties
